[gd_scene load_steps=10 format=3 uid="uid://cfvsv4vtqn30m"]

[ext_resource type="Texture2D" uid="uid://bni3mreiwwfwy" path="res://sprites/heal/heal_0.png" id="1_0krdl"]
[ext_resource type="Script" uid="uid://dv65krrfrjqcj" path="res://scenes/skills/heal.gd" id="1_yp8rh"]
[ext_resource type="Texture2D" uid="uid://ut22hpemoqt5" path="res://sprites/heal/heal_1.png" id="2_yp8rh"]
[ext_resource type="Texture2D" uid="uid://dwress0a2npo1" path="res://sprites/heal/heal_2.png" id="3_7hnho"]
[ext_resource type="Texture2D" uid="uid://brhvotngjwd0j" path="res://sprites/heal/heal_3.png" id="4_6fwmb"]
[ext_resource type="Texture2D" uid="uid://j6dpju3isou0" path="res://sprites/heal/heal_4.png" id="5_2csfb"]
[ext_resource type="Shape2D" uid="uid://cd6yeo1svgpvg" path="res://resources/heal_shape.tres" id="7_7hnho"]
[ext_resource type="AudioStream" uid="uid://c01btswu83ipp" path="res://sfx/skills/heal.ogg" id="8_6fwmb"]

[sub_resource type="SpriteFrames" id="SpriteFrames_7hnho"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_0krdl")
}, {
"duration": 1.0,
"texture": ExtResource("2_yp8rh")
}, {
"duration": 1.0,
"texture": ExtResource("3_7hnho")
}, {
"duration": 1.0,
"texture": ExtResource("4_6fwmb")
}, {
"duration": 1.0,
"texture": ExtResource("1_0krdl")
}, {
"duration": 1.0,
"texture": ExtResource("2_yp8rh")
}, {
"duration": 1.0,
"texture": ExtResource("3_7hnho")
}, {
"duration": 1.0,
"texture": ExtResource("4_6fwmb")
}, {
"duration": 1.0,
"texture": ExtResource("5_2csfb")
}],
"loop": false,
"name": &"player",
"speed": 15.0
}]

[node name="Heal" type="Area2D"]
scale = Vector2(3, 3)
collision_layer = 8
collision_mask = 32
script = ExtResource("1_yp8rh")

[node name="heal_collision" type="CollisionShape2D" parent="."]
shape = ExtResource("7_7hnho")

[node name="heal_animation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_7hnho")
frame = 8
frame_progress = 1.0

[node name="heal_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_6fwmb")
